syntax = "proto3";

package p010user;

service User {
    // Sends a greeting
    rpc login (LoginRequest) returns (LoginReply) {}
}

// The request message containing the user's name.
message LoginRequest {
    string username = 1;
    string password = 2;
}

// The response message containing the greetings
message LoginReply {
    string Token = 1;
    Error Error =2;
}

message Error {
    int32 code = 1;
    string message = 2;
}